--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="header">
+  <header class="header">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main">
-    <p id="top-section">
+  </header>
+  <main class="main">
+    <section id="top-section">
       <label for="new-task">Add Item</label>
       <div class="task-wrapper">
         <input id="new-task"class="task" type="text">
-      <button>Add</button></div>
-    </p>
+        <button>Add</button>
+      </div>
+    </section>
     <h3>Todo</h3>
     <ul id="incomplete-tasks">
-      <li><input type="checkbox">
+      <li>
+        <input type="checkbox">
         <label class="task">Pay Bills</label>
           <input type="text" class="task">
         <button class="edit">Edit</button>
@@ -43,7 +45,7 @@
         <button class="delete"><img src="./remove.svg"></button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
