--- a/index.html
+++ b/index.html
@@ -7,44 +7,48 @@
 </head>
 <body>
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="header__image" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
+    <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <section id="top-section">
-      <label for="new-task">Add Item</label>
-      <div class="task-wrapper">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
+    <section class="task task_add">
+      <h3 class="task__header task__header_add">Add Item</h3>
+      <div class="task__wrapper">
+        <input class="task__input task__input_add" type="text">
+        <button class="task__button task__button_add">Add</button>
       </div>
     </section>
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="Delete button"></button>
-      </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg" alt="Delete button"></button>
-      </li>
-    </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="Delete button"></button>
-      </li>
-    </ul>
+    <section class="task task_incomplete">
+      <h3 class="task__header">Todo</h3>
+      <ul class="task__list task__list_incomplete">
+        <li class="task__item">
+          <input class="task__check" type="checkbox">
+          <label class="task__label">Pay Bills</label>
+          <input class="task__input" type="text">
+          <button class="task__button task__button_edit">Edit</button>
+          <button class="task__button task__button_delete"><img src="./remove.svg" alt="Delete button"></button>
+        </li>
+        <li class="task__item task__item_edit">
+          <input class="task__check" type="checkbox">
+          <label class="task__label">Go Shopping</label>
+          <input class="task__input" type="text" value="Go Shopping" >
+          <button class="task__button task__button_save">Save</button>
+          <button class="task__button task__button_delete"><img src="./remove.svg" alt="Delete button"></button>
+        </li>
+      </ul>
+    </section>
+    <section class="task task_completed">
+      <h3 class="task__header">Completed</h3>
+      <ul class="task__list task__list_completed">
+        <li class="task__item">
+          <input class="task__check" type="checkbox" checked>
+          <label class="task__label">See the Doctor</label>
+          <input class="task__input" type="text">
+          <button class="task__button task__button_edit">Edit</button>
+          <button class="task__button task__button_delete"><img src="./remove.svg" alt="Delete button"></button>
+        </li>
+      </ul>
+    </section>
   </main>
   <script src="app.js"></script>
 </body>
